Remove .idea from TransformIt